samples/_failures_safe/1761251956_9b44c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_252cca2f.c: In function ‘main’:
./samples/SAFE/__tmp_252cca2f.c:137:13: error: expected declaration or statement at end of input
  137 |             current_day[31] = '\0';
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_252cca2f.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_252cca2f.c:137:13: error: expected declaration or statement at end of input
